# komprender

./: .prettierrc  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  input.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: consumer_commands.rs  kafka_connection.rs  main.rs  producer_commands.rs  schema_registry.rs  topic_commands.rs
src/components/misc/: SettingsProvider.tsx  ThemeToggle.tsx
src/components/pages/: Connect.tsx  Consumer.tsx  CreateTopic.tsx  Producer.tsx  TestContent.tsx  Topic.tsx  Topics.tsx
src/components/ui/: accordion.tsx  checkbox.tsx  command.tsx  resizable.tsx  sonner.tsx
