[package]
name = "komprender"
version = "1.2.0"
description = "Kafka GUI"
authors = ["puwka"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["window-start-dragging", "shell-open", "dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
rdkafka = "0.36.2"
once_cell = "1.19.0"
schema_registry_converter = { version = "4.0.0", features = ["avro"] }
apache-avro = "0.16.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
rand = "0.8.5"
lazy_static = "1.4.0"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
